syntax="proto3";

package position_service;

option go_package="genproto/position_service";

// import "google/protobuf/empty.proto";

service AttributeService {
    rpc CreateAttribute(CreateAttributeRequest) returns (Attribute) {}
    rpc GetAllAttribute(GetAllAttributeRequest) returns (GetAllAttributeResponse) {}
    rpc GetByIdAttribute(AttributeId) returns (Attribute) {}
    rpc UpdateAttribute(Attribute) returns (Attribute) {}
    rpc DeleteAttribute(AttributeId) returns (AttributeId) {}
}

message Attribute {
    string id = 1;
    string name = 2;
    string attribute_type = 3;
}

message CreateAttributeRequest {
    string name = 1;
    string attribute_type = 2;
}

message AttributeId {
    string id = 1;
}

message GetAllAttributeRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetAllAttributeResponse {
    repeated Attribute attributes = 1;
    int32 count = 2;
}

